inserção de meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Cartão de crédito, Animação, Hover">
+    <meta name="description" content="Projeto de interação com hover, usando apenas HTML e CSS">
+    <meta name="author" content="Felipe Barros Gouveia Tomé">
+    <meta name="robots" content="index, all">
+
     <link rel="icon" href="img/bx-credit-card.svg">
     <title>Flipping Card UI Design</title>
     <!-- boxicon link -->
